--- a/test1.html
+++ b/test1.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <style>
         .box {
-            width: 50%;
+            width: 100px;
             height: 100px;
-            background: rgb(168, 66, 66);
+            background: rgba(168, 66, 66);
+            padding: 10px;
+            border: 2px solid yellow;
+            box-sizing: border-box;
         }
-        .box:active{
-            background-color: rgb(142, 7, 253);
+
+        .box:hover{
+            background-color: rgba(142, 7, 253);
         }
-        .box::after {
-            content: attr(data-title);
-        }
+       
         h1:hover{
             color: red;
+            padding-inline: 20px;
+        
         }
         a::after {
             content: " (" attr(href) ")";
@@ -25,7 +29,7 @@
     </style>
 </head>
 <body>
-    <div class="box" title="Để đây cho bị chửi"></div>
+    <div class="box">ủa zjtr</div>
     <h1>PTT làm khùng làm điên</h1>
     <a href="facebook.com">PTT</a>
     <!--Lớp giả
