--- a/test3.html
+++ b/test3.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test 3</title>
+    <style>
+        html {
+            margin: 0;
+        }
+        h1 {
+            width: 100px;
+            color: chocolate;
+            text-align: center;
+            background-color: rgba(55, 80, 244, 0.3);
+            transition: ease-in-out 0.5s;
+            z-index: 1;
+        }
+        .lienket a {
+            text-decoration: none;
+            color: black;
+            background-color: rgba(178, 149, 245, 0.3);
+        }
+        .lienket a{
+            background-color: rgba(44, 0, 148, 0.3);
+            color: red;
+            padding: 4px;
+            
+        }
+        .bizberg_detail_cat{
+            background: rgba(201, 87, 87, 0.85);
+            padding: 10px 30px 12px;
+            left: 0;
+            border-radius: 0;
+            text-transform: uppercase;
+        }
+        .bizberg_detail_cat::after{
+        transition: ease-in-out 0.5s;
+        z-index: 1;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="bizberg_detail_cat">Học Bổng
+    </div>
+    <div class="lienket">
+        <a href="https://sso.hcmut.edu.vn/cas/login?service=http%3A%2F%2Fmybk.hcmut.edu.vn%2Fstinfo%2F">
+        Thông tin sinh viên MyBK
+    </a>
+    </div>
+    <div>
+    <h1>BKel</h1>
+    </div>
+    <div class="header">
+        Cổng thông tin sinh viên
+    </div>
 </body>
 </html>
